tests/fail/grid_pivot_nonstring_col.msh
# The column-key column must contain strings; an int row should error.
[| region, month, sales; "East", 1, 10 |]
["region"] "month" ("sales" gridCol sumInt) pivot wl
